CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_indiv_role_hist__x/fields/cde_role_case__c.field-meta.xml
<CustomField>
    <fullName>cde_role_case__c</fullName>
    <description>cde_role_case</description>
    <externalDeveloperName>cde_role_case</externalDeveloperName>
    <label>Cde_role_case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>