CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_indiv_role_hist__x/fields/dte_begin_effv__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_effv__c</fullName>
    <description>dte_begin_effv</description>
    <externalDeveloperName>dte_begin_effv</externalDeveloperName>
    <label>Dte_begin_effv</label>
    <type>Date</type>
</CustomField>