CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_indiv_role_hist__x/fields/dte_change_last__c.field-meta.xml
<CustomField>
    <fullName>dte_change_last__c</fullName>
    <description>dte_change_last</description>
    <externalDeveloperName>dte_change_last</externalDeveloperName>
    <label>Dte_change_last</label>
    <type>DateTime</type>
</CustomField>