CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_indiv_role_hist__x/fields/idn_case_indiv_role__c.field-meta.xml
<CustomField>
    <fullName>idn_case_indiv_role__c</fullName>
    <description>idn_case_indiv_role</description>
    <externalDeveloperName>idn_case_indiv_role</externalDeveloperName>
    <label>Idn_case_indiv_role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>