CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_indiv_role_hist__x/fields/idn_case_indiv_role_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_case_indiv_role_hist__c</fullName>
    <description>idn_case_indiv_role_hist</description>
    <externalDeveloperName>idn_case_indiv_role_hist</externalDeveloperName>
    <label>Idn_case_indiv_role_hist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>