CHATS_SIT/force-app/main/default/objects/Sfrosit_t_sbsd_case_indiv_role_hist__x/fields/ind_record_curr__c.field-meta.xml
<CustomField>
    <fullName>ind_record_curr__c</fullName>
    <description>ind_record_curr</description>
    <externalDeveloperName>ind_record_curr</externalDeveloperName>
    <label>Ind_record_curr</label>
    <length>1</length>
    <type>Text</type>
</CustomField>